<resources>
    <string name="app_name">My First Calculator</string>
    <string name="key_C">C</string>
    <string name="key_multiplication">*</string>
    <string name="key_division">:</string>
    <string name="key_backspace"><![CDATA[<-]]></string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_minus">-</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_plus">+</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_equals">=</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="settings">settings</string>
    <string name="Select">Selection of a theme</string>
    <string name="light_theme">light</string>
    <string name="dark_theme">dark</string>
    <string name="back_button">back to calculator</string>
</resources>