<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="20dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/key_backspace"
        app:layout_constraintStart_toStartOf="@id/key_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_C"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_C"
        app:layout_constraintEnd_toStartOf="@id/key_multiplication"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output" />

    <Button
        android:id="@+id/key_multiplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_multiplication"
        app:layout_constraintEnd_toStartOf="@id/key_division"
        app:layout_constraintStart_toEndOf="@id/key_C"
        app:layout_constraintTop_toBottomOf="@id/output" />

    <Button
        android:id="@+id/key_division"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_division"
        app:layout_constraintEnd_toStartOf="@id/key_backspace"
        app:layout_constraintStart_toEndOf="@id/key_multiplication"
        app:layout_constraintTop_toBottomOf="@id/output" />

    <Button
        android:id="@+id/key_backspace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_division"
        app:layout_constraintTop_toBottomOf="@id/output" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_C" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/key_multiplication" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/key_division" />

    <Button
        android:id="@+id/key_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/key_backspace" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_minus" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_equals"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <Button
        android:id="@+id/key_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/key_equals"
        app:layout_constraintBottom_toBottomOf="@id/key_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_plus" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/key_0"
        app:layout_constraintEnd_toEndOf="@id/key_8"
        app:layout_constraintStart_toStartOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/key_dot"
        app:layout_constraintEnd_toEndOf="@id/key_9"
        app:layout_constraintStart_toStartOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_9" />
</androidx.constraintlayout.widget.ConstraintLayout>